--- a/DTSA5510_News Classification.ipynb
+++ b/DTSA5510_News Classification.ipynb
@@ -2,19 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importing Libraries and Packages\n",
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt \n",
+    "import requests\n",
+    "from io import StringIO\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import completeness_score\n",
+    "from sklearn.metrics import homogeneity_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArticleId</th>\n",
+       "      <th>Text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1018</td>\n",
+       "      <td>qpr keeper day heads for preston queens park r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1319</td>\n",
+       "      <td>software watching while you work software that...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1138</td>\n",
+       "      <td>d arcy injury adds to ireland woe gordon d arc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>459</td>\n",
+       "      <td>india s reliance family feud heats up the ongo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1020</td>\n",
+       "      <td>boro suffer morrison injury blow middlesbrough...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ArticleId                                               Text\n",
+       "0       1018  qpr keeper day heads for preston queens park r...\n",
+       "1       1319  software watching while you work software that...\n",
+       "2       1138  d arcy injury adds to ireland woe gordon d arc...\n",
+       "3        459  india s reliance family feud heats up the ongo...\n",
+       "4       1020  boro suffer morrison injury blow middlesbrough..."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('hi')"
+    "#Reading in Dataframe from project github repository\n",
+    "url_train = 'https://raw.githubusercontent.com/JSchlangen9/News-Classification/main/BBC%20News%20Train.csv'\n",
+    "url_test = 'https://raw.githubusercontent.com/JSchlangen9/News-Classification/main/BBC%20News%20Test.csv'\n",
+    "file_train = requests.get(url_train)\n",
+    "file_test = requests.get(url_test)\n",
+    "string_train = StringIO(file_train.text)\n",
+    "string_test = StringIO(file_test.text)\n",
+    "\n",
+    "df_train = pd.read_csv(string_train)\n",
+    "df_test = pd.read_csv(string_test)"
    ]
   }
  ],
