--- a/DTSA5510_News Classification.ipynb
+++ b/DTSA5510_News Classification.ipynb
@@ -273,12 +273,12 @@
     "H = model.components_\n",
     "\n",
     "vals = np.matmul(W, H.transpose())\n",
-    "topics = {0:'sport', 1:'politics', 2:'business', 3:'entertainment', 4:'tech'}\n",
+    "topics = {-2:'sport', -1:'politics', 0:'business', 1:'entertainment', 2:'tech'}\n",
     "\n",
     "range = max(vals) - min(vals)\n",
     "avg = sum(vals) / len(vals)\n",
     "\n",
-    "vals = round(2*((vals - avg) / range))\n",
+    "vals = np.round(2*((vals - avg) / range))\n",
     "\n",
     "vals\n"
    ]
