--- a/DTSA5510_News Classification.ipynb
+++ b/DTSA5510_News Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        " <BarContainer object of 100 artists>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "  Text(34, 0, 'mr')])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -251,13 +251,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1199: FutureWarning: The default value of `n_components` will change from `None` to `'auto'` in 1.6. Set the value of `n_components` to `None` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1770: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "ename": "TypeError",
      "evalue": "'numpy.ndarray' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m vectors \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(df_train)):\n\u001b[1;32m      3\u001b[0m     mod \u001b[39m=\u001b[39m Word2Vec(df_train\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m     vectors\u001b[39m.\u001b[39mappend(mod\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mvectors\u001b[39m.\u001b[39msum())\n",
+      "Cell \u001b[0;32mIn[7], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m vals \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mround(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39m((vals \u001b[39m-\u001b[39m avg) \u001b[39m/\u001b[39m \u001b[39mrange\u001b[39m))\n\u001b[1;32m     18\u001b[0m ans \u001b[39m=\u001b[39m []\n\u001b[0;32m---> 19\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(vals)):\n\u001b[1;32m     20\u001b[0m     ans\u001b[39m.\u001b[39mappend(topics[vals[i]])\n\u001b[1;32m     22\u001b[0m ans\n",
       "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
      ]
     }
@@ -280,7 +290,11 @@
     "\n",
     "vals = np.round(2*((vals - avg) / range))\n",
     "\n",
-    "vals\n"
+    "ans = []\n",
+    "for i in range(len(vals)):\n",
+    "    ans.append(topics[vals[i]])\n",
+    "\n",
+    "ans\n"
    ]
   }
  ],
