--- a/DTSA5510_News Classification.ipynb
+++ b/DTSA5510_News Classification.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m vectors \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(df_train)):\n\u001b[1;32m      3\u001b[0m     mod \u001b[39m=\u001b[39m Word2Vec(df_train\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m     vectors\u001b[39m.\u001b[39mappend(mod\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mvectors\u001b[39m.\u001b[39msum())\n",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m vectors \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(df_train)):\n\u001b[1;32m      3\u001b[0m     mod \u001b[39m=\u001b[39m Word2Vec(df_train\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m     vectors\u001b[39m.\u001b[39mappend(mod\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mvectors\u001b[39m.\u001b[39msum())\n",
       "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
      ]
     }
@@ -279,12 +279,7 @@
     "avg = sum(vals) / len(vals)\n",
     "\n",
     "vals = np.round(2*((vals - avg) / range))\n",
-    "\n",
-    "ans = []\n",
-    "for i in range(len(df_train)):\n",
-    "    ans.append(topics[vals[i]])\n",
-    "\n",
-    "ans\n"
+    "ans = topics[vals]\n"
    ]
   },
   {
