--- a/DTSA5510_News Classification.ipynb
+++ b/DTSA5510_News Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "from collections import Counter\n",
     "from gensim.models import Word2Vec\n",
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.decomposition import NMF"
    ]
@@ -247,18 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m vectors \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(df_train)):\n\u001b[1;32m      3\u001b[0m     mod \u001b[39m=\u001b[39m Word2Vec(df_train\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m     vectors\u001b[39m.\u001b[39mappend(mod\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mvectors\u001b[39m.\u001b[39msum())\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1199: FutureWarning: The default value of `n_components` will change from `None` to `'auto'` in 1.6. Set the value of `n_components` to `None` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1770: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -278,16 +277,42 @@
     "range = max(vals) - min(vals)\n",
     "avg = sum(vals) / len(vals)\n",
     "\n",
-    "vals = np.round(2*((vals - avg) / range))\n",
-    "ans = topics[vals]\n"
+    "vals = np.round(2*((vals - avg) / range))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.ndarray' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m ans \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(df_train)):\n\u001b[1;32m      3\u001b[0m     \u001b[39mif\u001b[39;00m df_train\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msport\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      4\u001b[0m         ans\u001b[39m.\u001b[39mappend(\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "ans = []\n",
+    "for i in range(len(df_train)):\n",
+    "    if df_train.iloc[i]['Text'] == 'sport':\n",
+    "        ans.append(-2)\n",
+    "    elif df_train.iloc[i]['Text'] == 'politics':\n",
+    "        ans.append(-1)\n",
+    "    elif df_train.iloc[i]['Text'] == 'business':\n",
+    "        ans.append(0)\n",
+    "    elif df_train.iloc[i]['Text'] == 'entertainment':\n",
+    "        ans.append(1)\n",
+    "    elif df_train.iloc[i]['Text'] == 'tech':\n",
+    "        ans.append(2)\n",
+    "\n",
+    "accuracy_score(ans, vals)"
+   ]
   }
  ],
  "metadata": {
