--- a/DTSA5510_News Classification.ipynb
+++ b/DTSA5510_News Classification.ipynb
@@ -247,18 +247,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1199: FutureWarning: The default value of `n_components` will change from `None` to `'auto'` in 1.6. Set the value of `n_components` to `None` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1770: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m vectors \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(df_train)):\n\u001b[1;32m      3\u001b[0m     mod \u001b[39m=\u001b[39m Word2Vec(df_train\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m     vectors\u001b[39m.\u001b[39mappend(mod\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mvectors\u001b[39m.\u001b[39msum())\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+      "Cell \u001b[0;32mIn[6], line 25\u001b[0m\n\u001b[1;32m     23\u001b[0m     vals[val] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mpolitics\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     24\u001b[0m \u001b[39melif\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m---> 25\u001b[0m     vals[val] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mbusiness\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     26\u001b[0m \u001b[39melif\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m     27\u001b[0m     vals[val] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mentertainment\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
      ]
     }
    ],
@@ -281,39 +291,21 @@
     "vals = np.round(2*((vals - avg) / range))\n",
     "vals = list(vals)\n",
     "\n",
+    "ans = []\n",
+    "\n",
     "for val in vals:\n",
     "    if val == -2:\n",
-    "        vals[val] = 'sport'\n",
+    "        ans.append('sport')\n",
     "    elif val == -1:\n",
-    "        vals[val] = 'politics'\n",
+    "        ans.append('politics')\n",
     "    elif val == 0:\n",
-    "        vals[val] = 'business'\n",
+    "        ans.append('business')\n",
     "    elif val == 1:\n",
-    "        vals[val] = 'entertainment'\n",
+    "        ans.append('entertainment')\n",
     "    elif val == 2:\n",
-    "        vals[val] = 'tech'\n",
+    "        ans.append('tech')\n",
     "\n",
     "accuracy_score(df_train['Category'].tolist(), vals)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.], dtype=float32)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(vals)"
    ]
   }
  ],
