--- a/DTSA5510_News Classification.ipynb
+++ b/DTSA5510_News Classification.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "  Text(34, 0, 'mr')])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -247,19 +247,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m vectors \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(df_train)):\n\u001b[1;32m      3\u001b[0m     mod \u001b[39m=\u001b[39m Word2Vec(df_train\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mText\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m     vectors\u001b[39m.\u001b[39mappend(mod\u001b[39m.\u001b[39mwv\u001b[39m.\u001b[39mvectors\u001b[39m.\u001b[39msum())\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1199: FutureWarning: The default value of `n_components` will change from `None` to `'auto'` in 1.6. Set the value of `n_components` to `None` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/decomposition/_nmf.py:1770: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.18053691275167785"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -296,6 +305,31 @@
     "        ans.append('tech')\n",
     "\n",
     "accuracy_score(df_train['Category'].tolist(), ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2979865771812081"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier()\n",
+    "model.fit(np.array(vectors).reshape(-1, 1), df_train['Category'])\n",
+    "\n",
+    "predictions = model.predict(np.array(vectors).reshape(-1, 1))\n",
+    "\n",
+    "accuracy_score(predictions, df_train['Category'].tolist())"
    ]
   }
  ],
